--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,23 @@
 name: Go
 on: [push]
 jobs:
+  test:
+    name: test
+    strategy:
+      go-version: [1.12.x, 1.13.x]
+      platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: Set up Go
+        use: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Checkout code
+        use: actions/checkout@v1
+
+      - name: Test
+        run: go test ./...
 
   build:
     name: Build
@@ -20,6 +37,9 @@ jobs:
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
+            if [ ! -d "$GOPATH/bin" ]; then
+                mkdir "$GOPATH/bin"
+            fi
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
