--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,14 +4,15 @@ jobs:
   test:
     name: test
     strategy:
-      go-version: [1.12.x, 1.13.x]
-      platform: [ubuntu-latest, macos-latest, windows-latest]
+      matrix:
+        go-version: [1.12.x, 1.13.x]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: ${{ matrix.go-version }}
+    - name: Install Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: ${{ matrix.go-version }}
 
       - name: Checkout code
         uses: actions/checkout@v1
