--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,5 @@
-name: Go
-on: [push]
+name: Build and Test
+on: [push, pull-request]
 jobs:
   test:
     name: test
@@ -17,6 +17,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v1
 
+    - name: Get dependencies
+      run: go get -v -t -d ./...
+
     - name: Test
       run: go test ./...
 
@@ -32,10 +35,11 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Get dependencies
       run: |
+        export PATH=$PATH:$(go env GOPATH)/bin
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             if [ ! -d "$GOPATH/bin" ]; then
