--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,11 +14,25 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
 
+    - name: setup env
+      run: |
+        echo "::set-env name=GOPATH::$(go env GOPATH)"
+        echo "::add-path::$(go env GOPATH)/bin"
+      shell: bash
+
     - name: Checkout code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: go get -v -t -d ./...
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            if [ ! -d "$GOPATH/bin" ]; then
+                mkdir "$GOPATH/bin"
+            fi
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
 
     - name: Test
       run: go test ./...
@@ -34,12 +48,17 @@ jobs:
         go-version: 1.13
       id: go
 
+    - name: setup env
+      run: |
+        echo "::set-env name=GOPATH::$(go env GOPATH)"
+        echo "::add-path::$(go env GOPATH)/bin"
+      shell: bash
+
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
     - name: Get dependencies
       run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             if [ ! -d "$GOPATH/bin" ]; then
