--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,14 +22,14 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+        path: src/github.com/${{ github.repository }}
 
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
-            if [ ! -d "$GOPATH/bin" ]; then
-                mkdir "$GOPATH/bin"
-            fi
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
@@ -56,14 +56,14 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+        path: src/github.com/${{ github.repository }}
 
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
-            if [ ! -d "$GOPATH/bin" ]; then
-                mkdir "$GOPATH/bin"
-            fi
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
