--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,8 @@ jobs:
 
     - name: Get dependencies
       run: |
+        mv src/github.com "$GOPATH/src/"
+        cd "$GOPATH/src/github.com/${{ github.repository }}"
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
@@ -62,6 +64,8 @@ jobs:
 
     - name: Get dependencies
       run: |
+        mv src/github.com "$GOPATH/src/"
+        cd "$GOPATH/src/github.com/${{ github.repository }}"
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
