--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,6 +47,7 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
+      shell: bash
 
     - name: Test
       run: |
@@ -98,6 +99,7 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
+      shell: bash
 
     - name: Build
       run: |
