github action - set event

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,17 @@
 name: Build and Test
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - '**.go'
+      - '.github/**'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - '**.go'
+      - '.github/**'
 env:
   ACTIVE_PROFILE: prod
 jobs:
