--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,38 +19,38 @@ jobs:
     name: Test and Build
     strategy:
       matrix:
-        go-version: [1.13.x, 1.14.x]
+        go-version: [1.14, 1.19]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Install Go
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
 
-    - name: Setup env
-      run: |
-        echo "----> Active Profile = $ACTIVE_PROFILE"
-        echo "::set-env name=GOPATH::$(go env GOPATH)"
-        echo "::add-path::$(go env GOPATH)/bin"
-      shell: bash
+#    - name: Setup env
+#      run: |
+#        echo "----> Active Profile = $ACTIVE_PROFILE"
+#        echo "::set-env name=GOPATH::$(go env GOPATH)"
+#        echo "::add-path::$(go env GOPATH)/bin"
+#      shell: bash
 
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       # with:
       #   fetch-depth: 1
       #   path: ./src/github.com/${{ github.repository }}
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        # if [ -f Gopkg.toml ]; then
-        #     curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        #     dep ensure
-        # fi
+#    - name: Get dependencies
+#      run: |
+#        go get -v -t -d ./...
+#        # if [ -f Gopkg.toml ]; then
+#        #     curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+#        #     dep ensure
+#        # fi
 
     - name: Test
       run: go test -v ./...
 
     - name: Build
-      run: go build -v .
+      run: go build -v ./...
